--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
           <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
-        <style>
+        <!-- <style>
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
             }
-        </style>
+        </style> -->
         <link rel="stylesheet" href="css/main.css">
 
     </head>
