--- a/form.html
+++ b/form.html
@@ -1,22 +1,19 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
+  <title>AllTurk</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!-- <link rel="stylesheet" href="css/form.css"> -->
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/glyphicons.css">
 </head>
 <body>
-  <div class="wrapper">
+  <div class="container-fluid">
       <!--[if lt IE 8]>
           <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
@@ -50,8 +47,9 @@
             <input type="text" maxlength="64" id="txtEmail" autocomplete="off">
           </div>
           <!-- http://jsfiddle.net/sb8fyehv/ -->
-        <div class="repeat-product">
 <!-- Product section -->
+        <div class="repeat-product">
+
           <div class="form-group">
             <h3>Товар</h3>
             <label for="productLink">Ссылка:</label>
@@ -94,7 +92,7 @@
           </div>
           <div class="form-group">
             <span>
-              <input id="productNoPackaging" name="productNoPackaging" type="checkbox" class="removeOriginalPackage">
+              <input id="productNoPackaging" name="productNoPackaging" type="checkbox">
               <label for="productNoPackaging">Отправить без оригинальной упаковки</label>
             </span>
           </div>
@@ -103,46 +101,67 @@
               <input id="productCheck" name="productCheck" type="checkbox">
               <label for="productCheck">Заказать проверку товара</label>
             </span>
-
-            <a class="delete" href="#"></a>
           </div>
+          <button class="btn btn-primary glyphicon glyphicon-remove delete-product" id="productDelete" name="productDelete" style="display: none;">
+            <label for="productDelete">Удалить</label>
+          </button>
+          </a>
+        </div>
+
 <!-- Replacement product section -->
-          <div class="form-group" style="display: none;">
-            <div class="substitution-note">Вариант замены:</div>
-            <label>Ссылка:</label>
-            <input type="text" maxlength="1024" watermark="http://" placeholder="http://">
-            <label>Название товара: <span class="small">(<a href="#">есть артикул?</a>)</span></label>
-            <input type="text" maxlength="256">
-            <label>Артикул:</label>
-            <input type="text" maxlength="256">
-            <label>Цвет:</label>
-            <input type="text" maxlength="32">
-            <label>Размер:</label>
-            <input type="text" maxlength="32">
-            <label>Цена на сайте:</label>
-            <select>
+        <div class="repeat-replace-product" style="display: none;">
+          <div class="form-group">
+            <h3>Товар</h3>
+            <label for="replaceProductLink">Ссылка:</label>
+            <input id="replaceProductLink" name="replaceProductLink" type="text" maxlength="1024" class="jq_watermark" title="http://">
+          </div>
+          <div class="form-group">
+            <label for="replaceProductName">Название товара/Артикул:</label>
+            <input id="replaceProductName" name="replaceProductName" type="text" maxlength="256">
+          </div>
+          <div class="form-group">
+            <label for="replaceProductColor">Цвет:</label>
+            <input id="replaceProductColor" name="replaceProductColor" type="text" maxlength="32">
+
+            <label for="replaceProductSize">Размер:</label>
+            <input id="replaceProductSize" name="replaceProductSize" type="text" maxlength="32">
+          </div>
+          <div class="form-group">
+            <label for="replaceProductPrice">Цена на сайте:</label>
+            <select id="replaceProductCurrency" name="replaceProductCurrency" >
               <option value="TRY">TRY</option>
               <option value="USD">$</option>
               <option value="EUR">€</option>
             </select>
-            <input type="text" class="jq_watermark" maxlength="7" title="0.00">&nbsp;
-            <label>Кол-во:</label>
-            <input type="text" value="1" maxlength="3">
+            <input id="replaceProductPrice" name="replaceProductPrice" type="text" class="jq_watermark" maxlength="7" title="0.00">&nbsp;
+
+            <label for="replaceProductQty">Кол-во:</label>
+            <input id="replaceProductQty" name="replaceProductQty" type="text" value="1" maxlength="3">
+          </div>
+          <div class="form-group">
             <span class="small">
-            <a href="#" class="add-comment">Добавить комментарий</a>
-            <span class="or">или</span>
-              <a href="#" class="add-substitution">указать вариант замены</a>
+              <a href="#">Добавить комментарий</a>
+              <span class="or">или</span>
+              <a href="#">указать вариант замены</a>
             </span>
-            <label>Комментарий:</label>
-            <input type="text" maxlength="256">
-            <span class="check removeOriginalPackage hide">
-              <input type="checkbox" class="removeOriginalPackage">
-              <label>Отправить без оригинальной упаковки</label>
+
+            <div style="display: none;">
+              <label for="replaceProductComment">Комментарий:</label>
+              <input id="replaceProductComment" name="replaceProductComment" type="text" maxlength="256">
+            </div>
+          </div>
+          <div class="form-group">
+            <span>
+              <input id="replaceProductNoPackaging" name="replaceProductNoPackaging" type="checkbox">
+              <label for="replaceProductNoPackaging">Отправить без оригинальной упаковки</label>
             </span>
-            <span class="check checkItem hide">
-              <label>Заказать проверку товара</label>
-              <input type="checkbox" class="checkItem">
+          </div>
+          <div class="form-group">
+            <span>
+              <input id="replaceProductCheck" name="replaceProductCheck" type="checkbox">
+              <label for="replaceProductCheck">Заказать проверку товара</label>
             </span>
+
             <a class="delete" href="#"></a>
           </div>
         </div>
@@ -156,9 +175,10 @@
           </div>
           <!-- End of product section -->
           <div class="form-group">
-            <div class="comments">
+            <div class="comment">
               <label>Комментарии к заказу:</label>
-              <textarea class="jq_watermark" id="txtComments" title="Пример: если нет красного цвета, можно брать черный."></textarea>
+              <br />
+              <input class="form-control jq_watermark" title="Пример: если нет красного цвета, можно брать черный." type="textarea"></input>
             </div>
             <div class="errors" id="errors"></div>
             <button type="submit" class="btn btn-primary">Заказать</button>
@@ -186,13 +206,13 @@
     <script src="js/vendor/watermark.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
+    <!-- <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='//www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-    </script>
+    </script> -->
   </body>
 </html>
