--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
     </section>
 
     <section class="content module" id="" >
-      <div class="container">
+      <!-- <div class="container"> -->
 
 <!-- This is where the new form starts -->
         <form method="post" action="submit()" onsubmit="" id="order">
@@ -178,7 +178,7 @@
             <div class="comment">
               <label>Комментарии к заказу:</label>
               <br />
-              <input class="form-control jq_watermark" title="Пример: если нет красного цвета, можно брать черный." type="textarea"></input>
+              <input class="form-control" id="comment" title="Пример: если нет красного цвета, можно брать черный." type="textarea"></input>
             </div>
             <div class="errors" id="errors"></div>
             <button type="submit" class="btn btn-primary">Заказать</button>
@@ -187,7 +187,7 @@
             </div>
           </div>
         </form>
-      </div> <!-- /container -->
+      <!-- </div> //container -->
     </section>
   </div>
     <hr>
