--- a/form.html
+++ b/form.html
@@ -40,11 +40,11 @@
           </div>
           <div class="form-group">
             <label>Фамилия, имя:</label>
-            <input type="text" maxlength="64" id="txtName" class="">
+            <input type="text" maxlength="64" name="customerName" autocomplete="off">
           </div>
           <div class="form-group">
             <label>Электронная почта:</label>
-            <input type="text" maxlength="64" id="txtEmail" autocomplete="off">
+            <input type="text" maxlength="64" name="customerEmail" autocomplete="off">
           </div>
           <!-- http://jsfiddle.net/sb8fyehv/ -->
 <!-- Product section -->
