--- a/form.html
+++ b/form.html
@@ -51,7 +51,7 @@
         <div class="repeat-product">
           <div class="main-product">
             <div class="form-group">
-              <h3>Товар</h3>
+              <h4>Товар</h4>
               <label for="productLink">Ссылка:</label>
               <input id="productLink" name="productLink" type="text" maxlength="1024">
             </div>
@@ -80,9 +80,9 @@
             </div>
             <div class="form-group">
               <span class="small">
-                <a href="">Добавить комментарий</a>
-                <span class="or">или</span>
-                <a href="" id="productReplaceAdd" name="productReplaceAdd">вариант замены</a>
+                <a href="#" id="productCommentAdd" name="productCommentAdd">Добавить комментарий</a>
+                или
+                <a href="#" id="productReplaceAdd" name="productReplaceAdd">вариант замены</a>
               </span>
 
               <div style="display: none;">
@@ -110,7 +110,7 @@
 <!-- Replacement product section -->
         <div class="replace-product" style="display: none;">
           <div class="form-group">
-            <h3>Замена</h3>
+            <h4>Замена</h4>
             <label for="replaceProductLink">Ссылка:</label>
             <input id="replaceProductLink" name="replaceProductLink" type="text" maxlength="1024" title="http://">
           </div>
@@ -138,9 +138,7 @@
             <input id="replaceProductQty" name="replaceProductQty" type="text" value="1" maxlength="3">
           </div>
           <div class="form-group">
-            <span class="small">
-              <a href="#">Добавить комментарий</a>
-            </span>
+            <a href="#">Добавить комментарий</a>
 
             <div style="display: none;">
               <label for="replaceProductComment">Комментарий:</label>
