--- a/form.html
+++ b/form.html
@@ -33,6 +33,7 @@
       <!-- <div class="container"> -->
 
 <!-- This is where the new form starts -->
+
         <form id="order">
           <h2>Оформление заказа</h2>
           <div class="conditions">
@@ -51,7 +52,17 @@
         <div class="repeat-product">
           <div class="main-product">
             <div class="form-group">
-              <h4>Товар</h4>
+              <div class="row">
+                <div class="col-sm-10">
+                  <h4>Товар</h4>
+                </div>
+                <div class="col-sm-2">
+                  <button class="btn btn-primary glyphicon glyphicon-remove delete-product" id="productDelete" name="productDelete" style="display: none;">
+                    <label for="productDelete">Удалить</label>
+                  </button>
+                </div>
+              </div>
+
               <label for="productLink">Ссылка:</label>
               <input id="productLink" name="productLink" type="text" maxlength="1024">
             </div>
@@ -102,9 +113,6 @@
                 <label for="productCheck">Заказать проверку товара</label>
               </span>
             </div>
-            <button class="btn btn-primary glyphicon glyphicon-remove delete-product" id="productDelete" name="productDelete" style="display: none;">
-              <label for="productDelete">Удалить</label>
-            </button>
         </div>
 
 <!-- Replacement product section -->
@@ -176,7 +184,8 @@
               <br />
               <input class="form-control" id="comment" title="Пример: если нет красного цвета, можно брать черный." type="textarea"></input>
             </div>
-            <div class="">
+            <br />
+            <div class="form-group">
               <button type="submit" class="btn btn-primary" id="submitBtn">Заказать</button>
             </div>
             <div class="message success" style="display: none;">
