--- a/form.html
+++ b/form.html
@@ -37,45 +37,48 @@
         <form id="order">
           <h2>Оформление заказа</h2>
           <div class="conditions">
-            Условия: 10% от стоимости + шиппинг
+            Условия: 10% от стоимости + доставка от производителя на наш склад + доставка с нашего склада на ваш адрес
           </div>
-          <div class="form-group">
-            <label>Фамилия, имя:</label>
-            <input type="text" maxlength="64" name="customerName" autocomplete="off">
-          </div>
-          <div class="form-group">
-            <label>Электронная почта:</label>
-            <input type="text" maxlength="64" name="customerEmail" autocomplete="off">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="customerName">Имя Фамилия:</label>
+              <input type="text" class="form-control" maxlength="64" name="customerName" autocomplete="off">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="customerEmail">Электронная почта:</label>
+              <input type="text" class="form-control" maxlength="64" name="customerEmail" autocomplete="off">
+            </div>
           </div>
           <!-- http://jsfiddle.net/sb8fyehv/ -->
 <!-- Product section -->
         <div class="repeat-product">
           <div class="main-product">
-            <div class="form-group">
-              <div class="row">
-                <div class="col-sm-10">
-                  <h4>Товар</h4>
-                </div>
-                <div class="col-sm-2">
-                  <button class="btn btn-primary glyphicon glyphicon-remove delete-product" id="productDelete" name="productDelete" style="display: none;">
-                    <label for="productDelete">Удалить</label>
-                  </button>
-                </div>
+            <div class="form-group clearfix">
+              <div>
+                <h4>Товар</h4>
               </div>
-
+              <div class="float-right">
+                <button for="productDelete" class="btn btn-danger glyphicon glyphicon-remove delete-product" id="productDelete" name="productDelete" style="display: none;">
+                </button>
+              </div>
+            </div>
+            <div class="form-group row">
               <label for="productLink">Ссылка:</label>
-              <input id="productLink" name="productLink" type="text" maxlength="1024">
+              <input id="productLink" class="form-control" name="productLink" type="text" maxlength="1024">
             </div>
-            <div class="form-group">
-              <label for="productName">Название товара/Артикул:</label>
-              <input id="productName" name="productName" type="text" maxlength="256">
-            </div>
-            <div class="form-group">
-              <label for="productColor">Цвет:</label>
-              <input id="productColor" name="productColor" type="text" maxlength="32">
-
-              <label for="productSize">Размер:</label>
-              <input id="productSize" name="productSize" type="text" maxlength="32">
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="productName">Название товара/Артикул:</label>
+                <input id="productName" class="form-control" name="productName" type="text" maxlength="256">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="productColor">Цвет:</label>
+                <input id="productColor" class="form-control" name="productColor" type="text" maxlength="32">
+              </div>
+              <div class="form-group col-md-2">
+                <label for="productSize">Размер:</label>
+                <input id="productSize" class="form-control" name="productSize" type="text" maxlength="32">
+              </div>
             </div>
             <div class="form-group">
               <label for="productPrice">Цена на сайте:</label>
@@ -146,8 +149,9 @@
             <input id="replaceProductQty" name="replaceProductQty" type="text" value="1" maxlength="3">
           </div>
           <div class="form-group">
-            <a href="#">Добавить комментарий</a>
-
+            <span class="small">
+              <a href="#">Добавить комментарий</a>
+            </span>
             <div style="display: none;">
               <label for="replaceProductComment">Комментарий:</label>
               <input id="replaceProductComment" name="replaceProductComment" type="text" maxlength="256">
@@ -171,7 +175,12 @@
       </div>
           <!-- End of replacement product section -->
           <div class="form-group">
-            <a href="#" class="add-product">Добавить новый товар</a>
+            <button class="btn btn-success glyphicon glyphicon-plus add-product">
+              <span class="buttonText">
+                Добавить новый товар
+              </span>
+            </button>
+            <!-- <a href="#" class="add-product">Добавить новый товар</a> -->
           </div>
           <div class="totals">
             <div class="left">Всего к оплате: &nbsp;</div>
