--- a/form.html
+++ b/form.html
@@ -201,13 +201,13 @@
     <footer>
       <p>&copy; AllTurk 2018</p>
     </footer>
-    <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-v3.2.1.min.js"><\/script>')</script> -->
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-v3.2.1.min.js"><\/script>')</script>
 
     <script src="js/main.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/vendor/modernizr-respond.js"></script>
     <script src="js/vendor/watermark.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script> -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <!-- <script>
