--- a/form.html
+++ b/form.html
@@ -183,13 +183,13 @@
             <br /><br />
           </div>
             <div class="form-row d-flex">
-              <div class="p-2">
+              <div class="mr-auto p-2">
                 <button type="submit" class="btn btn-primary btn-lg" id="submitBtn">Заказать</button>
               </div>
               <div class="p-2">
                 <label>Всего к оплате: &nbsp;</label>
               </div>
-              <div class="mr-auto p-2 total">
+              <div class="p-2 total">
               </div>
             </div>
             <div class="message success" style="display: none;">
