--- a/form.html
+++ b/form.html
@@ -188,8 +188,8 @@
               </div>
               <div class="p-2">
                 <label>Всего к оплате: &nbsp;</label>
-              </div>
-              <div class="p-2 total">
+                <div class="total">
+                </div>
               </div>
             </div>
             <div class="message success" style="display: none;">
