--- a/form.html
+++ b/form.html
@@ -105,11 +105,11 @@
             </div>
             <div class="form-check form-check-inline">
               <input class="form-check-input" id="productNoPackaging" name="productNoPackaging" type="checkbox">
-              <label class="form-check-label" for="productNoPackaging">Отправить без оригинальной упаковки</label>
+              <label class="form-check-label" for="productNoPackaging">Отправить без оригинальной упаковки (1TRY/шт)</label>
             </div>
             <div class="form-check form-check-inline">
               <input class="form-check-input" id="productCheck" name="productCheck" type="checkbox">
-              <label class="form-check-label" for="productCheck">Заказать проверку товара</label>
+              <label class="form-check-label" for="productCheck">Заказать проверку товара (2TRY/шт)</label>
             </div>
         </div>
 
